# devstral-engineer

./: AGENTS.md  LICENSE  README.md  appimage.yml  com.example.MyApp.json  com.github.da-beda.devstral-engineer.json  config.py  conversation_store.py  cost_tracker.py  ddg_deep.py  ddg_search.py  devstral-eng.py  devstral.desktop  devstral_eng.py  io.github.dabeda.devstral-engineer.json  planner.py  pyproject.toml  requirements.txt
.augment/env/: setup.sh
.github/workflows/: nightly-release.yml  release.yml  test.yml
code_index_engine/: __init__.py  api.py  client.py  embeddings.py  qdrant_store.py  scanner.py  watcher.py
devstral_cli/: __init__.py  chat.py  logo.py  onboarding.py  qdrant_runtime.py  tui.py
scripts/: build_qdrant.sh
tests/: __init__.py  test_apply_diff_edit.py  test_code_index_engine.py  test_config.py  test_conversation_store.py  test_cost_tracker.py  test_ddg_deep.py  test_ddg_search.py  test_engine_recovery.py  test_execute_function_call.py  test_index_engine_process.py  test_is_binary_file.py  test_normalize_path.py  test_onboarding.py  test_planner.py  test_qdrant_runtime.py  test_qdrant_store.py  test_search_code.py  test_secure_paths.py  test_session_history.py
