[project]
name = "devstral-engineer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.58.1",
    "prompt-toolkit>=3.0.50",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "tiktoken>=0.7.0",
    "tree_sitter>=0.20.4",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.3",
    "typer>=0.12.3",
    "questionary>=2.0.1",
]

[project.scripts]
devstral = "devstral_cli:app"
