[project]
name = "devstral-engineer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.58.1",
    "prompt-toolkit>=3.0.50",
    "pydantic==2.10.4",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "tiktoken>=0.7.0",
    "tree_sitter>=0.20.4",
    "pyyaml>=6.0",
    "aiohttp>=3.9.5",
    "beautifulsoup4>=4.12.3",
    "typer>=0.12.3",
    "questionary>=2.0.1",
    "textual>=3.3.0",
    "numpy>=1.26.0",
    "pathspec>=0.12.1",
    "watchdog>=3.0.0",
    "fastapi==0.110.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
devstral = "devstral_cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.4.8",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.setuptools.package-data]
"devstral_cli" = ["bin/qdrant-*"]
